# babs

./: .env.example  .envrc  .gitignore  .tool-versions  README.md  main.py  pyproject.toml  requirements.txt
.claude/agents/: backtest.md  data-pipeline.md  issue-refiner.md  risk-ops.md  strategy-dev.md  trading-engine.md
backtesting/: engine.py  metrics.py  runner.py
bot/: order_manager.py  position_tracker.py  risk_manager.py  trader.py
config/: accounts.py
data/: downloader.py  polymarket_client.py  storage.py
data/ohlcv/: BTC_USDT_15m.csv  BTC_USDT_1h.csv  BTC_USDT_4h.csv  ETH_USDT_15m.csv  ETH_USDT_1h.csv  ETH_USDT_4h.csv
deploy/: run_backtest.py  run_bot.py  run_monitor.py
docs/reports/backtest/: 2026-03-24-parameter-sweep.md  2026-03-24-strategy-evaluation.md  2026-03-25-market-making-evaluation.md  extended-market-results.md  observability-analysis.md  parameter_sweep.py  sweep_results.csv
incubation/: monitor.py  scaler.py
src/babs/: __init__.py  cli.py
src/babs/backtesting/: engine.py  metrics.py  runner.py
src/babs/bot/: order_manager.py  position_tracker.py  risk_manager.py  trader.py
src/babs/config/: settings.py
src/babs/data/: candle_builder.py  polymarket_client.py
src/babs/incubation/: logger.py  monitor.py  scaler.py
src/babs/strategies/: base_strategy.py  cvd_strategy.py  macd_strategy.py  rsi_mean_reversion.py  (+1 more)
strategies/: base_strategy.py  cvd_strategy.py  macd_strategy.py  rsi_mean_reversion.py
tests/: test_backtesting.py  test_candle_builder.py  test_market_making_strategy.py  test_risk_manager.py  test_strategies.py
