[project]
name = "babs"
version = "0.1.0"
description = "Trading bot"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
  "py-clob-client>=0.0.1",
  "python-dotenv>=1.0.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "ccxt>=4.0.0",
  "ta>=0.10.0",
  "click>=8.3.1",
]

[project.scripts]
babs = "babs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
